# Sentrybot_ws

./: README.md
debris/: audio_recognizer_pocketsphinx.py  audio_recognizer_simple.py  data.yml  helper.py  kws_test.py  models.py  test_1.py  test_2.py  voice_control.py-2
debris/debris/: voice_cmd.dic  voice_cmd.kwlist
debris/sentrybot_pocketsphinx/: CMakeLists.txt  README.md  package.xml
debris/sentrybot_pocketsphinx/launch/: kws.launch
debris/sentrybot_pocketsphinx/scripts/: kws_test.py  send_audio.py  send_audio_1.py  set_goal_custom.py
sentrybot_audio/: CMakeLists.txt  README.md  package.xml
sentrybot_audio/model/: .~lock.Sentrybot Corpus#  README.md  Sentrybot Corpus  neutral_corpus.txt  test_cmd.lm
sentrybot_audio/scripts/: audio_classification.py  audio_output.py  audio_source.py  features.py  functions.py  graph_formating.py  helper.py  sentrybot_chatbot.py  speech_recognizer.py
sentrybot_avatar/: CMakeLists.txt  README.md  package.xml
sentrybot_avatar/media/: idle.json
sentrybot_avatar/scripts/: avatar.py  say.py
sentrybot_description/: CMakeLists.txt  package.xml
sentrybot_description/config _knightscope/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
sentrybot_description/config_sentrybot/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
sentrybot_description/launch/: knightscope_rviz.launch  sentrybot_rviz.launch
sentrybot_description/meshes/bergeron_map_pgm,yaml/: bergeron_final_map.yaml
sentrybot_description/rviz_configurations/: autonomous_navigation_setup.rviz  mapping_config.rviz
sentrybot_description/slam_toolbox-noetic-devel/slam_toolbox/config/: mapper_params_lifelong.yaml  mapper_params_localization.yaml  mapper_params_offline.yaml  mapper_params_online_async.yaml  mapper_params_online_sync.yaml
sentrybot_description/slam_toolbox-noetic-devel/slam_toolbox/launch/: localization.launch  online_sync.launch
sentrybot_description/urdf/: cylinderbot.urdf.xacro  knightscope.urdf.xacro  sentrybot.urdf.xacro
sentrybot_gazebo/: CMakeLists.txt  package.xml
sentrybot_gazebo/config/: knightscope_ekf_localization.yaml  sentrybot_ekf_localization.yaml
sentrybot_gazebo/launch/: amcl_and_moveBase.launch  amcl_for_slam.launch  gmapping_sentrybot.launch  knightscope.gazebo.launch  sentrybot_barrier_world_gazebo.launch  sentrybot_bergeron_gazebo.launch  sentrybot_gazebo.launch  sentrybot_sherman_gazebo.launch
sentrybot_gazebo/urdf/: knightscope.gazebo.xarco  sentrybot.gazebo.xarco
sentrybot_gazebo/worlds/: barrier_world.world  bergeron_world.world  rooms.world  sherman_world.world
sentrybot_msgs/: CMakeLists.txt  README.md  package.xml
sentrybot_msgs/msg/: AudioInput.msg  AvatarUtterance.msg  SentimentAnalysis.msg  TaggedString.msg
